
GNet NEWS
---------

Changes in Gnet

1.1.1 ("Cornmeal" release, UNRELEASED)
-----
* gnet_{sha,md5}_clone functions
* MacOSX port


1.1.0 ("Oatmeal" release)
-----
* UDP supports broadcast
* TCP/UDP supports multiple interfaces
* Various new internet address helper functions
    (e.g. autodetect_internet_interface, list_interfaces) 
* New SHA and MD5 hash modules
* New Perl/Python-style pack/unpack module
* New experimental URL, "Server", and "Conn" modules
* Full Windows port
* Bug fixes in gnet_io_channel_readn, gnet_io_channel_readline_strdup, 
    thread-safe DNS lookup

1.0.4
-----
* Small bug fixes
* Partial Windows port

1.0.3
-----
* Fixed bug in gnet_inetaddr_new_async

1.0.2
-----
* Fixed bugs in Inetaddr async functions
* Fixed memory leaks in inetaddr and tcp async functions
* Portability fixes for OpenBSD and FreeBSD 4.0

1.0.1
-----
* Fixed bug in readline_strdup

1.0.0
-----
* Some renaming
* Upgrade to libtool 1.3.4
* First stable release

0.1.9
-----
* async functions now cancelable
* Added *_ref and *_unref functions
* Added gnet_iochannel_readline_strdup
* "nonblock" functions renamed to "async"
* Jacques Fortier added to AUTHORS for gnet_iochannel_readline_strdup
* Not binary compatable with 0.1.8

0.1.8
-----
* HP-UX and other portability fixes.
* Fixed bug in gnet_inetaddr_new_nonblock where dotted decimal
    address caused a seg fault.
* Fixed bug in Solaris version of gnet_inetaddr_get_name.
* Deleting a NULL object is now allowed.
* IOChannel semantics have changed - see documentation.

0.1.7
-----
* Fixed bugs in gnet_iochannel_{readn, writen, readline}.
* Fixed bug in gnet_tcp_socket_server_accept (took up all CPU time in loop)
* Fixed bug in echoserver (blocking) and hfetch example.  We now close
    and unref the iochannel.
* Portability fix - use g_snprintf, not snprintf
* Binary compatable with 0.1.4

0.1.6
-----
* Fixed header files for C++
* Fixed header files for multiple inclusion
* Binary compatable with 0.1.4

0.1.5
-----