@@ -78,3 +78,54 @@ easier. For each file, just do:
   diff -u file.c.orig file.c > /tmp/file.c.patch
 
 and just send us the patch: /tmp/file.c.patch.
+
+
+
+Fork vs. Pthread in asynchronous DNS lookup
+-------------------------------------------
+
+Running a simple benchmark on a Dual Pentium II running Linux 2.4.4,
+shows that pthreads outperforms forking slightly.  The benchmark
+performs an asynchronous lookup of www.microsoft.com asynchronously
+100 times in sequence.  Results below.
+
+time ./dnstest www.microsoft.com async 100 > /dev/null
+
+Pthread
+4.850u 0.490s 0:05.07 105.3%	0+0k 0+0io 1179pf+0w
+4.840u 0.540s 0:05.08 105.9%	0+0k 0+0io 1179pf+0w
+4.820u 0.420s 0:05.04 103.9%	0+0k 0+0io 1179pf+0w
+
+Fork
+5.090u 0.810s 0:03.52 167.6%	0+0k 0+0io 6013pf+0w
+4.750u 0.840s 0:03.24 172.5%	0+0k 0+0io 5492pf+0w
+4.690u 0.890s 0:03.38 165.0%	0+0k 0+0io 5492pf+0w
+
+Pthread
+4.810u 0.680s 0:05.30 103.5%	0+0k 0+0io 1700pf+0w
+4.830u 0.550s 0:05.07 106.1%	0+0k 0+0io 1179pf+0w
+4.880u 0.400s 0:05.03 104.9%	0+0k 0+0io 1179pf+0w
+
+Fork
+5.050u 0.890s 0:03.50 169.7%	0+0k 0+0io 6013pf+0w
+4.850u 0.910s 0:03.24 177.7%	0+0k 0+0io 5492pf+0w
+5.160u 0.680s 0:03.30 176.9%	0+0k 0+0io 5492pf+0w
+
+
+In a different benchmark, where './dnstest www.microsoft.com async 1'
+is run 100 times, fork outperforms pthreads.  I would hypothesize that
+the pthread library has an expensive initialization step.
+
+time ./dnsbench > /dev/null
+
+Fork
+6.810u 6.080s 0:17.05 75.6%	0+0k 0+0io 113543pf+0w
+6.120u 6.740s 0:17.11 75.1%	0+0k 0+0io 113543pf+0w
+6.530u 6.490s 0:17.08 76.2%	0+0k 0+0io 113543pf+0w
+6.180u 6.440s 0:17.09 73.8%	0+0k 0+0io 113543pf+0w
+
+Pthread
+11.510u 6.920s 0:17.32 106.4%	0+0k 0+0io 118564pf+0w
+11.370u 6.500s 0:17.10 104.5%	0+0k 0+0io 118043pf+0w
+10.850u 7.290s 0:16.95 107.0%	0+0k 0+0io 118043pf+0w
+10.810u 7.010s 0:17.08 104.3%	0+0k 0+0io 118043pf+0w
